[package]
name = "myc"
version = "0.1.0"
edition = "2024"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version = "1.92.0"
license = "AGPL-3.0"
description = "Mycorrhiza Nostr remote signer (NIP-46)"

[workspace]
resolver = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.17"
