[package]
name = "myc"
version = "0.1.0"
edition = "2024"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version = "1.92.0"
license = "AGPL-3.0"
description = "Mycorrhiza Nostr remote signer (NIP-46)"

[workspace]
resolver = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
nostr = { version = "0.44.2", features = ["nip04", "nip44", "nip46"] }
radroots_identity = { path = "../../../../foundation/libs/rs/radroots/crates/identity" }
radroots_log = { path = "../../../../foundation/libs/rs/radroots/crates/log" }
radroots_nostr_accounts = { path = "../../../../foundation/libs/rs/radroots/crates/nostr_accounts", default-features = false, features = ["std", "memory-vault", "os-keyring"] }
radroots_nostr = { path = "../../../../foundation/libs/rs/radroots/crates/nostr", features = ["client", "events"] }
radroots_nostr_connect = { path = "../../../../foundation/libs/rs/radroots/crates/nostr_connect" }
radroots_nostr_signer = { path = "../../../../foundation/libs/rs/radroots/crates/nostr_signer", features = ["native"] }
radroots_protected_store = { path = "../../../../foundation/libs/rs/radroots/crates/protected_store", features = ["std"] }
radroots_runtime_paths = { path = "../../../../foundation/libs/rs/radroots/crates/runtime_paths" }
radroots_secret_vault = { path = "../../../../foundation/libs/rs/radroots/crates/secret_vault", features = ["std", "os-keyring"] }
radroots_sql_core = { path = "../../../../foundation/libs/rs/radroots/crates/sql_core", features = ["native"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v7"] }
zeroize = "1.8"

[dev-dependencies]
futures-util = "0.3.32"
tempfile = "3.17"
tokio-tungstenite = "0.26.2"
